fix coach name spacing , fix styling issue with ReviewerJobs

--- a/src/ResumeQ/components/ReviewerJobs/LeftNav.scss
+++ b/src/ResumeQ/components/ReviewerJobs/LeftNav.scss
@@ -1,17 +1,16 @@
-
-.reviewer-jobs-container{
-	 display: flex;
-	 flex-direction: column;
-	 justify-content: center;
- }
+.rq-reviewer-jobs-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 .SeekerQNav-btn {
-    padding: 10px;
-    color: #FB2046;
-    font-size: 2.4rem;
-    text-decoration: none;
+  padding: 10px;
+  color: #fb2046;
+  font-size: 2.4rem;
+  text-decoration: none;
 }
 
 .SeekerQNav-btn.active {
-    text-decoration: underline;
+  text-decoration: underline;
 }
